--- a/AUTHORS
+++ b/AUTHORS
@@ -1,20 +1,26 @@
-icewm -- authors file.  2024-06-16
+icewm -- authors file.  2025-02-22
 
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Author: Marina J. Donis <marinajdonis@gmail.com>
 Author: Temuri Doghonadze <temuri.doghonadze@gmail.com>
-Author: Baurzhan Muftakhidinov <baurthefirst@gmail.com>
-Author: Rodrigo Macedo <sottomaiormacedotec@sottomaiormacedo.tech>
-Author: Hugo Carvalho <hugokarvalho@hotmail.com>
-Author: Luna  Jernberg <bittin@opensuse.org>
-Author: David Medina <medipas@gmail.com>
-Author: openSUSE Weblate <weblate-noreply@opensuse.org>
-Author: Mehmet Akif 9oglu <madanadam@gmail.com>
+Author: Rantala <toni.rantala@protonmail.com>
+Author: Eduard Bloch <blade@debian.org>
+Author: Ettore Atalan <atalanttore@googlemail.com>
 Author: Aleš Kastner <alkas@volny.cz>
+Author: Yasuhiko Kamata <belphegor@belbel.or.jp>
+Author: Luna  Jernberg <bittin@opensuse.org>
 Author: Dmitriy Khanzhin <jinn@altlinux.org>
 Author: Ferdinand Galko <galko.ferdinand@gmail.com>
+Author: David Medina <medipas@gmail.com>
+Author: Hugo Carvalho <hugokarvalho@hotmail.com>
+Author: Mehmet Akif 9oglu <madanadam@gmail.com>
+Author: Code7R <Code7R@users.noreply.github.com>
+Author: Virinas code <alexcode228@gmail.com>
+Author: Alessio Adamo <alessio.adamo@gmail.com>
+Author: Baurzhan Muftakhidinov <baurthefirst@gmail.com>
+Author: Rodrigo Macedo <sottomaiormacedotec@sottomaiormacedo.tech>
+Author: openSUSE Weblate <weblate-noreply@opensuse.org>
 Author: Freek de Kruijf <freek@opensuse.org>
-Author: Yasuhiko Kamata <belphegor@belbel.or.jp>
-Author: Eduard Bloch <blade@debian.org>
 Author: Sophie Leroy <sophie@stoquart.com>
 Author: Grace Yu <grace.yu@excel-gits.com>
 Author: Davide Aiello <davide.aiello@novilingulists.com>
@@ -72,7 +78,6 @@ Author: Jorge Gallegos Carrasco <jcarrascochih@gmail.com>
 Author: Stanislav Brabec <sbrabec@suse.cz>
 Author: Hela Basa <R45XvezA@pm.me>
 Author: Claudio Cesar de Sá <ccs1664@gmail.com>
-Author: Code7R <Code7R@users.noreply.github.com>
 Author: Arif Budiman <arifpedia@gmail.com>
 Author: WhiredPlanck <47623588+whriedplanck@users.noreply.github.com>
 Author: DieSpinne <62444221+DieSpinne@users.noreply.github.com>
@@ -96,7 +101,6 @@ Author: Brian Bidulock <bidulock@openss7.org>
 Author: Nathan <ndowens04@gmail.com>
 Author: Kevin Suo <suokunlong@126.com>
 Author: Artem Polishchuk <tim77@users.noreply.github.com>
-Author: Alessio Adamo <alessio.adamo@gmail.com>
 Author: micrococo <micrococo@users.noreply.github.com>
 Author: jcsl <trcs@gmx.com>
 Author: Thomas Koller <tk120@protonmail.com>
@@ -161,7 +165,6 @@ Author: Shyukri Shyukriev <shshyukriev@suse.com>
 Author: Oliver Kurz <okurz@suse.de>
 Author: Reedych <linux.user2003@gmail.com>
 Author: Reedych <reedych@reedych.pw>
-Author: Ettore Atalan <atalanttore@googlemail.com>
 Author: Kamil Stańczyk <suszaraa@gmail.com>
 Author: Panagiotis Mantzios <pmantzios@hotmail.com>
 Author: Joakim Ganse <joakim.ganse@b-iq.se>
