--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,145 @@
 # created with git log --stat=76 -M -C -500|fmt -sct -w80
 
+commit 2baa0096631ebad54efd287b83d2513191fece9b
+Merge: 55c2ed5f 5ac0a3c5
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Thu Feb 27 23:29:58 2025 +0100
+
+    Merge branch 'icewm-1-4-BRANCH'
+
+commit 5ac0a3c523b5f80eee9e62b67cac63baec1b1445
+Merge: 2ca5022e 3997b08e
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Thu Feb 27 23:29:31 2025 +0100
+
+    Merge remote-tracking branch 'upstream/icewm-1-4-BRANCH' into
+    icewm-1-4-BRANCH
+
+commit 3997b08e9497516a4ce7161eb126e0998b1549d4
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Thu Feb 27 22:56:54 2025 +0100
+
+    Update the event time strictly increasing.
+
+ src/wmmgr.cc | 6 +++++-
+ 1 file changed, 5 insertions(+), 1 deletion(-)
+
+commit 634ed229455e5bd247af941cc70faad1b56a1db3
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Thu Feb 27 22:36:22 2025 +0100
+
+    Improve focusing xterms by first updating our notion of the server time
+    from xproperty events for issue ice-wm/icewm#188.
+
+ src/wmmgr.cc | 18 ++++++++++++++++++
+ 1 file changed, 18 insertions(+)
+
+commit 7aa9ad20acca1d694aef1159d0025f408f79f75b
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Thu Feb 27 20:38:45 2025 +0100
+
+    Wait for the Return key-release event before accepting the address bar
+    input line to avoid stray Return key-release events in applications.
+
+ src/yinputline.cc | 17 +++++++++++++++--
+ src/yinputline.h  |  2 ++
+ 2 files changed, 17 insertions(+), 2 deletions(-)
+
+commit 2bef7a7228cb0c65bc5572b0ae9cc44e5c55aa2d
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Thu Feb 27 19:00:39 2025 +0100
+
+    Fix toolbar addButton for issue ice-wm/icewm#186.
+
+ src/objbar.cc | 19 ++++++++-----------
+ 1 file changed, 8 insertions(+), 11 deletions(-)
+
+commit 1e337026c9625515621f7c3ce16914065abdb54b
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Wed Feb 26 15:19:24 2025 +0100
+
+    Let QuickSwitch select the proper client tab, before activating a frame.
+
+ src/wmswitch.cc | 12 +++++++-----
+ 1 file changed, 7 insertions(+), 5 deletions(-)
+
+commit c78690b6204d12da98257f91fa70fe947de7d6c8
+Author: Temuri Doghonadze <temuri.doghonadze@gmail.com>
+Date:   Wed Feb 26 09:39:34 2025 +0000
+
+    Translated using Weblate (Georgian)
+
+    Currently translated at 52.7% (277 of 525 strings)
+
+ po/ka.po | 44 ++++++++++++++++++++++----------------------
+ 1 file changed, 22 insertions(+), 22 deletions(-)
+
+commit 720b5b23704e97d9363814be1d123eecbed863fb
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Feb 25 14:38:25 2025 +0100
+
+    Remove trailing carriage-returns from each input line in icewm-menu-fdo
+    for ice-wm/icewm#186.
+
+ src/fdomenu.cc | 3 +++
+ 1 file changed, 3 insertions(+)
+
+commit 5f45f31fddf1cb2de649790c4c0b50ca38e8cbb1
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Feb 25 14:16:29 2025 +0100
+
+    Skip past carriage-returns in getArgument for ice-wm/icewm#186.
+
+ src/yconfig.cc | 8 ++++++--
+ 1 file changed, 6 insertions(+), 2 deletions(-)
+
+commit 3de1b851912315a50b88309b6f1eaa60bd3c0adb
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sun Feb 23 19:50:09 2025 +0100
+
+    Simplify key handling in MenuProgSwitchItems.
+
+ src/wmprog.cc | 17 ++++++-----------
+ 1 file changed, 6 insertions(+), 11 deletions(-)
+
+commit 26751c7bfbd0bf79e2b10b600fbc4b1ec31ecb5b
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sun Feb 23 17:38:40 2025 +0100
+
+    Fix broken modSuperIsCtrlAlt for issue #791.
+
+ src/wmcontainer.cc | 11 ++++++-----
+ src/wmkey.cc       | 30 +++++++++++++++++++++++-------
+ src/wmkey.h        |  7 ++++---
+ src/wmprog.cc      |  2 +-
+ src/ywindow.h      |  2 +-
+ 5 files changed, 35 insertions(+), 17 deletions(-)
+
+commit f154124896ea2c54aa6d6a1265af2098f52cc08b
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sun Feb 23 13:29:43 2025 +0100
+
+    Link against NLS libs for icewm-menu-fdo and closes ice-wm/icewm#185.
+
+ src/CMakeLists.txt | 2 +-
+ 1 file changed, 1 insertion(+), 1 deletion(-)
+
+commit 55c2ed5f8a67a2341c7245f98d263cac78947a29
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sat Feb 22 21:47:00 2025 +0100
+
+    Prepare 3.7.0 release
+
+ AUTHORS      |   29 +-
+ ChangeLog    | 8639 +++++++++++++++++++++++++++---------------------------
+ INSTALL      |    6 +-
+ NEWS         |  339 ++-
+ README.md    |   16 +-
+ RELEASE.md   |    2 +-
+ VERSION      |    2 +-
+ configure.ac |   12 +-
+ 8 files changed, 4596 insertions(+), 4449 deletions(-)
+
 commit 1dafaa3a9ffa95447d70c933a332df9fe988b8db
 Merge: b843f88f 2ca5022e
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
@@ -5846,149 +5986,3 @@ Date:   Sun Apr 23 18:46:26 2023 +0200
 
  src/aworkspaces.cc | 16 ++++++++--------
  1 file changed, 8 insertions(+), 8 deletions(-)
-
-commit f208e27aefaf629ae26233faad284dbb3e76f217
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Apr 23 18:36:54 2023 +0200
-
-    Cache workspace button backgrounds for faster redrawing.
-
- src/aworkspaces.cc | 33 +++++++++++++++++++++++++++++++--
- src/aworkspaces.h  |  6 +++++-
- 2 files changed, 36 insertions(+), 3 deletions(-)
-
-commit eb0933d1feebc715bb0e5db1c3c4395da3384da7
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Apr 23 18:34:01 2023 +0200
-
-    Improve the quality of drawing gradients for the GdkPixbuf renderer.
-
- src/yimage_gdk.cc | 84 ++++++++++++++++++++++++++++++++++++++++++++++-----
- src/yimage_gdk.h  | 13 ++++----
- 2 files changed, 82 insertions(+), 15 deletions(-)
-
-commit f156d91f36dcdadb2f035afc3f25f04ee66e89b1
-Author: Mehmet Akif 9oglu <madanadam@gmail.com>
-Date:   Sat Apr 22 05:48:44 2023 +0000
-
-    Translated using Weblate (Turkish)
-
-    Currently translated at 100.0% (525 of 525 strings)
-
- po/tr.po | 40 ++++++++++++++++++++--------------------
- 1 file changed, 20 insertions(+), 20 deletions(-)
-
-commit dd36202452c1ffa41d394f0525a401b1ee304731
-Author: Mehmet Akif 9oglu <madanadam@gmail.com>
-Date:   Fri Apr 21 06:28:45 2023 +0000
-
-    Translated using Weblate (Turkish)
-
-    Currently translated at 100.0% (525 of 525 strings)
-
- po/tr.po | 82 ++++++++++++++++++++++++++++++------------------------------
- 1 file changed, 41 insertions(+), 41 deletions(-)
-
-commit d35634ee379b663f97883cdf957a951b5b56349a
-Author: Wallon <franckjl@hotmail.com>
-Date:   Fri Apr 21 09:05:23 2023 +0000
-
-    Translated using Weblate (French)
-
-    Currently translated at 100.0% (525 of 525 strings)
-
- po/fr.po | 12 +++++-------
- 1 file changed, 5 insertions(+), 7 deletions(-)
-
-commit 703414c3d27c2499f54b3eea29baab1f714b305b
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Wed Apr 19 19:32:12 2023 +0200
-
-    Let icesh also pick icewm internal and override redirect windows.
-
- src/icesh.cc | 16 +++++++++++++++-
- 1 file changed, 15 insertions(+), 1 deletion(-)
-
-commit 83d8f80309081e42e5b607b88ca5f6cc11339175
-Author: Dmitriy Khanzhin <jinn@altlinux.org>
-Date:   Wed Apr 19 04:37:20 2023 +0000
-
-    Translated using Weblate (Russian)
-
-    Currently translated at 100.0% (525 of 525 strings)
-
- po/ru.po | 4 ++--
- 1 file changed, 2 insertions(+), 2 deletions(-)
-
-commit c9e82998930fce2cccdbc4cdcceacdfebffbb8e9
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Apr 16 22:18:13 2023 +0200
-
-    Improve arrow navigation in the system dialog.
-
- src/wmdialog.cc | 43 +++++++++++++++++++++++++++++++------------
- src/wmdialog.h  |  2 ++
- 2 files changed, 33 insertions(+), 12 deletions(-)
-
-commit 999cccd3c2d2e66f0c297e7888edc4b09c92b3e8
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Apr 16 11:13:32 2023 +0200
-
-    Improve the quality of drawing gradients for the Imlib2 renderer.
-
- src/ref.h       |  2 +-
- src/wmstatus.cc |  8 ++----
- src/yimage2.cc  | 71 +++++++++++++++++++++++++++++++++++++++++++++++++++--
- src/yimage2.h   |  8 +++---
- src/ypaint.cc   | 20 +++++++++++++++
- src/ypaint.h    |  8 ++----
- 6 files changed, 99 insertions(+), 18 deletions(-)
-
-commit 75c35d5acaa101b7c3efdeb9148f84d65b40b2be
-Author: Dmitriy Khanzhin <jinn@altlinux.org>
-Date:   Sat Apr 15 14:55:33 2023 +0000
-
-    Translated using Weblate (Russian)
-
-    Currently translated at 100.0% (525 of 525 strings)
-
- po/ru.po | 75 ++++++++++++++++++++++++++++--------------------------------
- 1 file changed, 35 insertions(+), 40 deletions(-)
-
-commit e7fef962ae0fbd353264be01d32ef6d6a3ae1f13
-Author: bittin <droidbittin@gmail.com>
-Date:   Fri Apr 14 18:10:33 2023 +0200
-
-    Swedish translation and credits (#714)
-
- lib/icewm-session.desktop | 2 ++
- lib/icewm.desktop         | 2 ++
- po/sv.po                  | 1 +
- 3 files changed, 5 insertions(+)
-
-commit 522e38e88e71226da02f25808516aa73734ab2e9
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Wed Apr 12 23:55:52 2023 +0200
-
-    When internationalization is disabled, unset LIBICONV.
-
- configure.ac | 2 ++
- 1 file changed, 2 insertions(+)
-
-commit 2b19f7d199fe40c5b655330a00c68a0a5b9dfcfe
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Mon Apr 10 23:38:10 2023 +0200
-
-    Fix corrupted text if built without i18n for issue ice-wm/icewm#131.
-
- src/ylocale.cc | 2 +-
- 1 file changed, 1 insertion(+), 1 deletion(-)
-
-commit 54c594deb9c547cb48e4079d028036647ac83f99
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Mon Apr 10 23:38:05 2023 +0200
-
-    Deprecate XRRDisable.
-
- src/wmapp.cc | 1 +
- 1 file changed, 1 insertion(+)
